upgrade to use latest version of xtext
- update mwe2 launcher
- new ide plugin
- use replacement classes for several deprecated code
- compile for java 11